--- a/Regression/Car_Price_Prediction_LR.ipynb
+++ b/Regression/Car_Price_Prediction_LR.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Car Price Prediction LR.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,9 +18,19 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Foursteps-tech/Machine_Learning/blob/main/Regression/Car_Price_Prediction_LR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/deepanrajm/machine_learning.git"
+        "!git clone https://github.com/Foursteps-tech/Machine_Learning.git"
       ],
       "metadata": {
         "id": "tGdAZMxgatP4"
@@ -29,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "l-DE8z4tVcZn"
       },
@@ -43,8 +54,19 @@
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
         "# reading the dataset\n",
-        "cars = pd.read_csv(\"machine_learning/Regression/CarPrice_Assignment.csv\")"
+        "cars = pd.read_csv(\"Machine_Learning/Regression/CarPrice_Assignment.csv\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cars.head()"
+      ],
+      "metadata": {
+        "id": "ryshKpa2b6_y"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -61,10 +83,10 @@
     {
       "cell_type": "code",
       "source": [
-        "cars.head()"
+        "cars.describe()"
       ],
       "metadata": {
-        "id": "ryshKpa2b6_y"
+        "id": "mJUyqOBftKBp"
       },
       "execution_count": null,
       "outputs": []
@@ -290,7 +312,7 @@
       "metadata": {
         "id": "NfxO53AmeGOr"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +352,7 @@
       "metadata": {
         "id": "scEN9k_5ePOS"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -353,7 +375,7 @@
       "metadata": {
         "id": "fZM71CIeekl7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +405,7 @@
       "metadata": {
         "id": "X1Oa4_W9en0v"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +425,7 @@
         "id": "kXurHfAxeyQc",
         "outputId": "848f9f8c-1786-480b-c2d5-b9fbc62cd3b8"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +659,7 @@
       "metadata": {
         "id": "Ehz1C6FJe7va"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,7 +671,7 @@
       "metadata": {
         "id": "SGyk1sCBe-eN"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +705,7 @@
       "metadata": {
         "id": "sFRL8iR_fIT_"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
