--- a/Classification/Random_Forest.ipynb
+++ b/Classification/Random_Forest.ipynb
@@ -37,13 +37,12 @@
         "from sklearn.metrics import classification_report\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn import tree"
+        "from sklearn.model_selection import train_test_split"
       ],
       "metadata": {
         "id": "RdKPKjEgi55q"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -67,7 +66,7 @@
       "metadata": {
         "id": "hd-1HE8_m-B5"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -81,7 +80,7 @@
       "metadata": {
         "id": "fxUOVnAHnjzU"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -93,19 +92,19 @@
       "metadata": {
         "id": "Wlh5djsbjLsG"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#splitter = best, random | max_features = int, auto, log, none | max_depth = int\n",
-        "model = RandomForestClassifier(n_estimators=10, random_state=42,criterion='gini')"
+        "model = RandomForestClassifier(n_estimators=30, random_state=42,criterion='gini',max_depth=10)"
       ],
       "metadata": {
         "id": "BsOYrJRrjPye"
       },
-      "execution_count": 9,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -149,7 +148,7 @@
       "metadata": {
         "id": "v3xbS0aVjoTi"
       },
-      "execution_count": 13,
+      "execution_count": 54,
       "outputs": []
     },
     {
